# FastAPI_GCP_Webhook

./: main.py  pyproject.toml
backend/: main.py
backend/api/app/routers/: getMainInfo.py
backend/api/core/: config.py
