[tool.poetry]
name = "fastapi-gcp-webhook"
version = "0.1.0"
description = ""
authors = ["minato-legend <tigerrabbit22@outlook.com>"]
readme = "README.md"
packages = [{include = "fastapi_gcp_webhook"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
python-dotenv = "^1.0.0"
fastapi = "^0.95.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
